# EKFCore

./: CMakeLists.txt  Makefile  README.md  TODO.md
src/: types.hpp
src/common/: EkfTraits.hpp  INoiseGenerator.hpp  NoiseGenerator.cpp  common.cpp  common.hpp
src/ekf/: ExtendedKalmanFilter.cpp  ExtendedKalmanFilter.hpp
src/kalman_filters/: KalmanFilter.cpp  KalmanFilter.hpp
src/models/: IVehicle.hpp  IVehicleModel.hpp  Unicycle.cpp  Unicycle.hpp  UnicycleModel.cpp  UnicycleModel.hpp
src/sim/: GroundTruthSimulator.cpp  GroundTruthSimulator.hpp  INoiseGenerator.hpp  NoiseGenerator.cpp  NoisySensorSimulator.cpp  NoisySensorSimulator.hpp  Sensor.cpp  Sensor.hpp
tests/: test_generate_correlated_noise.cpp  test_ground_truth_simulator.cpp  test_helper.hpp  test_helpers.hpp  test_sensor.cpp  test_unicycle_model.cpp
